# korean-llm-cost

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
experiments/: 01_tpc_news_pilot.py  02_tpc_news_n1000.py  03_tpc_conversation_n1000.py  04_p7_subject_tiers.py  05_p8_and_gemini_origin.py  06_pilot_medical_n100.py  07_tpc_medical_n1000.py  08_p9_medical_subanalysis.py  09_ecpc_snapshot.py
notebooks/: 01_sanity_check.ipynb
src/korean_llm_cost/: __init__.py  corpus_loader.py  length_buckets.py  medical_predictions.py  metrics.py  subject_groups.py
src/korean_llm_cost/tokenizers/: __init__.py  anthropic_tok.py  base.py  google_tok.py  hf_tok.py  openai_tok.py
