[project]
name = "korean-llm-cost"
version = "0.1.0"
description = "Tokenizer efficiency and cost comparison for Korean across major LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "krkarma777" }]
keywords = ["korean", "llm", "tokenizer", "cost", "nlp"]

# Phase 1 keeps the runtime dependency surface tiny.
# Heavier providers (Anthropic API, Google, HuggingFace) live in optional groups
# so a fresh clone can do `uv sync` and run the openai/tiktoken sanity check
# without pulling torch.
dependencies = [
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
google = ["google-generativeai>=0.8.0"]
hf = [
    "transformers>=4.45.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.20.0",
]
analysis = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scipy>=1.13",
]
dev = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "ruff>=0.6",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_llm_cost"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
